--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<style type="text/tailwindcss"></style>
 </head>
 
-<body>
+<body class="bg-slate-700">
 
 	<div class="p-5 flex category-list items-center gap-[5px]"></div>
 	<ul class="list flex justify-between gap-[30px]  flex-wrap">
